--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <header>
-        <a href="#">Logo</a>
-        <div class="logInButtons">
-            <a href="#" class="button">Log In</a>
-            <a href="#" class="button">Register</a>
+    <div class="wrapper">
+        <header>
+            <a class="logo" href="#">Logo</a>
+            <div class="logInButtons">
+                <a href="#" class="button">Log In</a>
+                <a href="#" class="button">Register</a>
+            </div>
+        </header>
+
+        <div class="main">
+            <div class="mainContainer">
+                <h1>I've:</h1>
+                <a href="#" class="button">Lost Something</a>
+                <a href="#" class="button">Found Something</a>
+            </div>
         </div>
-    </header>
 
-    <div class="main">
-        <h1>I've:</h1>
-        <a href="#" class="button">Lost Something</a>
-        <a href="#" class="button">Found Something</a>
+        <footer>
+            <a href="#">About</a>
+            <a href="#">FAQ's</a>
+        </footer>
     </div>
-
-    <footer>
-        <a href="#">About</a>
-        <a href="#">FAQ's</a>
-    </footer>
-
     
 </body>
 </html>
