--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <footer>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
             <a href="#">FAQ's</a>
         </footer>
     </div>
