added faq page and css structure

--- a/about.html
+++ b/about.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lost and Found</title>
+    <title>About - Lost and Found</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <a class="logo" href="#">Logo</a>
+            <a class="logo" href="index.html">Logo</a>
             <div class="logInButtons">
                 <a href="#" class="button">Log In</a>
                 <a href="#" class="button">Register</a>
@@ -43,7 +43,7 @@
 
         <footer>
             <a href="about.html">About</a>
-            <a href="#">FAQ's</a>
+            <a href="faq.html">FAQ's</a>
         </footer>
     </div>
     
