--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <a class="logo" href="#">Logo</a>
+            <a class="logo" href="index.html">Logo</a>
             <div class="logInButtons">
                 <a href="#" class="button">Log In</a>
                 <a href="#" class="button">Register</a>
@@ -26,7 +26,7 @@
 
         <footer>
             <a href="about.html">About</a>
-            <a href="#">FAQ's</a>
+            <a href="faq.html">FAQ's</a>
         </footer>
     </div>
     
