added return button

--- a/account/myItems.html
+++ b/account/myItems.html
@@ -75,6 +75,8 @@
                         </div>
                     </div>
                 </div>
+
+                <a href="account.html" class="button">Back to Account</a>
             </div>
         </div>
 
